fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -608,6 +608,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  overflow: hidden;
 }
 
 @media (min-width: 576px) {
